# Google-Stock-News-Sentiment-Analysis-Dashboard

./: README.md  dashboard.py  data_analysis.ipynb  finviz_scrapper.py  google_news_scrapper.ipynb  main.py  pyproject.toml  reddit_scrapper.ipynb  stock_scrapper.ipynb  test.ipynb  test_scrapper.ipynb
app/: data_analyser.py  data_processor.py  data_scrapper.py  sentiment_analyser.py
